protocolmodel/mcrl2/testing/errors/error_1005.mcf
% E1005 - Unexpected peer identifier
[true* . ERROR_MSG(E1005)] false